--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,8 @@
     "uikit": "^3.6.18"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "prettier": "2.2.1",
+    "ssl-root-cas": "^1.3.1"
   },
   "keywords": [
     "gatsby"
