--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "global": "^4.4.0",
     "kill-port": "^1.6.1",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
