--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
   },
   "devDependencies": {
     "prettier": "2.2.1",
-    "ssl-root-cas": "^1.3.1"
+    "ssl-root-cas": "^1.3.1",
+    "whatwg-fetch": "^3.6.2"
   },
   "keywords": [
     "gatsby"
